static file applied

--- a/restaurant/templates/home.html
+++ b/restaurant/templates/home.html
@@ -1,15 +1,10 @@
-{% include "base.html" %} {% block content %}
-<div
-    class="hero min-h-screen"
-    style="
-        background-image: url(https://daisyui.com/images/stock/photo-1507358522600-9f71e620c44e.jpg);
-    "
->
-    <div class="hero-overlay bg-opacity-60"></div>
-    <div class="hero-content text-center text-neutral-content">
+{% load static %} {% include "base.html" %} {% block content %}
+<div>
+    <img src="{% static 'docker.png' %}" alt="My image" />
+    <div>
         <div class="max-w-md">
             <h1 class="mb-5 text-5xl font-bold">Hello there</h1>
-            <p class="mb-5">
+            <p class="mb-5 color-red">
                 Provident cupiditate voluptatem et in. Quaerat fugiat ut
                 assumenda excepturi exercitationem quasi. In deleniti eaque aut
                 repudiandae et a id nisi.
