css and static files added

--- a/templates/base.html
+++ b/templates/base.html
@@ -3,13 +3,14 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Meal App</title>
+        <title>Restaurent App</title>
         <link
             href="https://cdn.jsdelivr.net/npm/daisyui@4.4.17/dist/full.min.css"
             rel="stylesheet"
             type="text/css"
         />
         <script src="https://cdn.tailwindcss.com"></script>
+        <link rel="stylesheet" href="static/css/style.css" />
     </head>
     <body>
         <div>{% block content %}{% endblock content %}</div>
