--- a/restaurant/templates/home.html
+++ b/restaurant/templates/home.html
@@ -1,8 +1,8 @@
 {% load static %} {% include "base.html" %} {% block content %}
 <div>
-    <img src="{% static 'docker.png' %}" alt="My image" />
     <div>
-        <div class="max-w-md">
+        <div class="max-w-md mx-auto">
+            <img src="{% static 'image.png' %}" alt="My image" />
             <h1 class="mb-5 text-5xl font-bold">Hello there</h1>
             <p class="mb-5 color-red">
                 Provident cupiditate voluptatem et in. Quaerat fugiat ut
