--- a/templates/base.html
+++ b/templates/base.html
@@ -13,6 +13,15 @@
         <link rel="stylesheet" href="static/css/style.css" />
     </head>
     <body>
+        <div class="navbar bg-base-100">
+            <div class="navbar-center hidden lg:flex">
+                <ul class="menu menu-horizontal px-1">
+                    <li><a href="/">Home</a></li>
+                    <li><a href="/meal">Meal</a></li>
+                    <li><a href="/about">About</a></li>
+                </ul>
+            </div>
+        </div>
         <div>{% block content %}{% endblock content %}</div>
     </body>
 </html>
